# KitchenWeight

Electronics/: KitchenWeight-B_Cu.gbl  KitchenWeight-B_Mask.gbs  KitchenWeight-B_Paste.gbp  KitchenWeight-B_Silkscreen.gbo  KitchenWeight-Edge_Cuts.gm1  KitchenWeight-F_Cu.gtl  KitchenWeight-F_Mask.gts  KitchenWeight-F_Paste.gtp  KitchenWeight-F_Silkscreen.gto  KitchenWeight-NPTH-drl_map.gbr  KitchenWeight-NPTH.drl  KitchenWeight-PTH-drl_map.gbr  KitchenWeight-PTH.drl  KitchenWeight.kicad_pcb  KitchenWeight.kicad_prl  KitchenWeight.kicad_pro  KitchenWeight.kicad_sch  sensors.kicad_sym  sym-lib-table
Mechanics/: Body.FCStd
Software/: Cargo.toml  build.rs
Software/.cargo/: config.toml
Software/atmega-hal/: Cargo.toml
Software/src/: main.rs
Software/src/hardware/: hx711.rs  lcd.rs  lcd_c.rs  mod.rs  pca9685.rs  sd.rs  sensor_generics.rs  twi_conroller.rs  usart_controller.rs
Software/src/utils/: event.rs  linkedlist.rs  logging_tool.rs  mod.rs
