[package]
name = "atmega328p-test"
version = "0.1.0"
links = "liblcd"
authors = ["Mathias"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "atmega328p-test"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
typenum = "*"
atmega-hal = { path = "./atmega-hal" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
